# synaptic

./: .gitignore  .importlinter  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
docs/decisions/: 0001-duckdb-instead-of-postgres.md  0002-python-only-no-rust-in-v1.md  0003-secret-manager-port.md  0004-synthera-boundary-contract.md  0005-audit-canonicality.md  0006-policy-split.md
synaptic_bridge/: Dockerfile  __init__.py  pyproject.toml
synaptic_bridge/application/commands/: __init__.py
synaptic_bridge/application/orchestration/: __init__.py
synaptic_bridge/application/queries/: __init__.py
synaptic_bridge/domain/: constants.py  exceptions.py
synaptic_bridge/domain/entities/: execution_session.py  tool_manifest.py
synaptic_bridge/domain/events/: __init__.py
synaptic_bridge/domain/ports/: __init__.py
synaptic_bridge/infrastructure/adapters/: __init__.py  drift_detector.py  duckdb_store.py  intent_classifier.py  opa_engine.py  secret_manager.py  siem_connectors.py  spiffe_controller.py  worm_audit.py
synaptic_bridge/infrastructure/config/: __init__.py
synaptic_bridge/infrastructure/mcp_servers/: __init__.py
synaptic_bridge/infrastructure/observability/: __init__.py
synaptic_bridge/infrastructure/services/: call_graph.py  circuit_breaker.py
tests/application/: test_cle_integration.py  test_commands.py  test_orchestration_and_queries.py
tests/domain/: test_domain_extras.py  test_entities.py  test_value_objects.py
tests/infrastructure/: test_adapters.py  test_observability.py  test_secret_manager.py
tests/integration/: test_api.py  test_api_errors.py
(+5 files in other folders)
